[tool.poetry]
name = "photo-importer"
version = "0.1.0"
description = ""
authors = ["Jonathan Gazeley <me@jonathangazeley.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
exifread = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
